# ocds-data-summary

./: .gitignore  Dockerfile  README.md  asset-manifest.json  docker-compose.yml  index.html  manage.py  package.json  pyproject.toml
.github/workflows/: frontend.yml
frontend/: month_counts.json  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  Heapmap.js  util.js
frontend/src/hooks/: useD3.js
ocds_data_summary/: settings.py  tasks.py  test.py  urls.py  wsgi.py
ocds_data_summary/core/: admin.py  apps.py  models.py  summary.py  tasks.py  tests.py  urls.py  views.py
ocds_data_summary/core/management/commands/: fetch.py  summarise.py  update.py
ocds_data_summary/core/migrations/: 0001_initial.py  0002_alter_category_options_and_more.py  0003_alter_entity_options.py  0004_alter_category_options_alter_entity_options_and_more.py  0005_alter_summary_options.py  0006_alter_category_label_alter_entity_label.py  0007_fetchreport_rename_summary_ocdssummary_and_more.py  0008_alter_fetchreport_stats.py
ocds_data_summary/core/templates/core/: index.html
ocds_data_summary/templates/: base.html  index.html
static/css/: main.14ce1b63.css  main.14ce1b63.css.map
static/js/: 787.510e7a3c.chunk.js  787.510e7a3c.chunk.js.map  main.b6d742b7.js  main.b6d742b7.js.map
