[tool.poetry]
name = "ocds_data_summary"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
django-environ = "^0.10.0"
psycopg2 = "^2.9.7"
werkzeug = "^2.3.6"
whitenoise = "^6.5.0"
sentry-sdk = "^1.29.2"
django-extensions = "^3.2.3"
pytest-cov = "^2.10.1"
html5lib = "^1.1"
gunicorn = "^21.2.0"
gevent = "^23.7.0"
django-q = "^1.3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
