[tool.poetry]
name = "ocds_data_summary"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"
django-environ = "^0.10.0"
psycopg2 = "^2.9.7"
werkzeug = "^2.3.6"
whitenoise = "^6.5.0"
sentry-sdk = "^1.29.2"
django-extensions = "^3.2.3"
pytest-cov = "^2.10.1"
html5lib = "^1.1"
gunicorn = "^21.2.0"
gevent = "^23.7.0"
django-q = "^1.3.9"
django-admin-sortable2 = "2.1.9"
kingfisher-scrapy = {git = "https://github.com/vulekamali/kingfisher-collect.git", rev = "6367a98"}
# kingfisher-scrapy deps:
scrapy = "2.9.0"
referencing = "0.28.5"
requests = "2.31.0"
rfc3986-validator = "0.1.1"
flattentool = "0.20.1"
ijson = "3.1.1"
jsonpointer = "2.0"
jsonschema = "4.18.0a9"
ocdskit = "1.1.7"
ocdsmerge = "0.6.4"
pika = "1.2.0"
rarfile = "3.1"
django-import-export = "3.2.0"
django-constance = "3.1.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
